[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://entities/guns/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://tools/Listener.tscn" type="PackedScene" id=4]
[ext_resource path="res://tools/LineOfSight.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/bullets/EnemyBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://tools/HealthManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Scatter.tres" type="Material" id=8]
[ext_resource path="res://sprites/RedParticles.png" type="Texture" id=9]
[ext_resource path="res://sprites/Enemy.png" type="Texture" id=10]
[ext_resource path="res://sfx/Death.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=6]
resource_name = "Dead"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RotateGroup/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RotateGroup/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotateGroup/Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RotateGroup/Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotateGroup/Sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Running"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotateGroup/Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotateGroup/Gun:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, -6 ), Vector2( 6, -6 ), Vector2( 5, -6 ), Vector2( 5, -5 ) ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 17
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 6 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Running = SubResource( 5 )

[node name="HealthManager" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, -13 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="Collider" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="Target" type="Sprite" parent="Debug"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="MoveIntention" type="RayCast2D" parent="Debug"]

[node name="RotateGroup" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="RotateGroup"]
texture = ExtResource( 10 )
hframes = 4
vframes = 3

[node name="Gun" parent="RotateGroup" instance=ExtResource( 3 )]
position = Vector2( 5, -6 )
bullet_scene = ExtResource( 6 )

[node name="LineOfSight" parent="." instance=ExtResource( 5 )]
collision_mask = 17

[node name="Navigation" type="NavigationAgent2D" parent="."]
path_desired_distance = 8.0
target_desired_distance = 12.0
path_max_distance = 100.0
avoidance_enabled = true
radius = 16.0
max_speed = 300.0

[node name="Listener" parent="." instance=ExtResource( 4 )]

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.1
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 8 )
texture = ExtResource( 9 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -12.0

[connection signal="dead" from="HealthManager" to="." method="_on_HealthManager_dead"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="heard_sound" from="Listener" to="." method="_on_Listener_heard_sound"]
